--- a/Twitter/TweetsViewController.xib
+++ b/Twitter/TweetsViewController.xib
@@ -24,31 +24,31 @@
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pqu-my-ozc">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
                     <animations/>
-                    <color key="backgroundColor" red="0.19563736648165497" green="0.47277501457017723" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.40220550840606473" green="0.57615037650880252" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="66" id="UFq-Vd-N2o"/>
                     </constraints>
                     <items>
                         <navigationItem title="Twitter" id="yyo-7r-Jqq" colorLabel="IBBuiltInLabel-Blue">
-                            <barButtonItem key="leftBarButtonItem" style="plain" id="emN-62-IQL">
-                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="BxF-jp-VDi">
-                                    <rect key="frame" x="16" y="29" width="66" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <animations/>
-                                    <state key="normal" title="Compose"/>
-                                    <connections>
-                                        <action selector="onCompose:" destination="-1" eventType="touchUpInside" id="lfW-NE-wVZ"/>
-                                    </connections>
-                                </button>
-                            </barButtonItem>
-                            <barButtonItem key="rightBarButtonItem" style="plain" id="Wgz-gz-HPb">
+                            <barButtonItem key="leftBarButtonItem" id="Wgz-gz-HPb">
                                 <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Zbl-i9-z1B">
-                                    <rect key="frame" x="256" y="29" width="48" height="30"/>
+                                    <rect key="frame" x="16" y="29" width="48" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <animations/>
                                     <state key="normal" title="Logout"/>
                                     <connections>
                                         <action selector="onLogout:" destination="-1" eventType="touchUpInside" id="onv-pb-29a"/>
+                                    </connections>
+                                </button>
+                            </barButtonItem>
+                            <barButtonItem key="rightBarButtonItem" id="emN-62-IQL">
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="BxF-jp-VDi">
+                                    <rect key="frame" x="238" y="29" width="66" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <animations/>
+                                    <state key="normal" title="Compose"/>
+                                    <connections>
+                                        <action selector="onCompose:" destination="-1" eventType="touchUpInside" id="lfW-NE-wVZ"/>
                                     </connections>
                                 </button>
                             </barButtonItem>
