--- a/Twitter/TweetCell.xib
+++ b/Twitter/TweetCell.xib
@@ -7,11 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="68" id="KGk-i7-Jjw" customClass="TweetCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="106" id="KGk-i7-Jjw" customClass="TweetCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="106"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="67.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="105.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="User" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vrz-Py-uXP">
@@ -36,8 +36,15 @@
                             <constraint firstAttribute="height" constant="48" id="cxG-Bl-Bnb"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VCw-Yy-avx">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Tweet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VCw-Yy-avx">
                         <rect key="frame" x="66" y="35" width="246" height="24.5"/>
+                        <animations/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorites" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiQ-S3-Idy">
+                        <rect key="frame" x="8" y="64" width="70" height="21"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -46,6 +53,7 @@
                 </subviews>
                 <animations/>
                 <constraints>
+                    <constraint firstItem="qiQ-S3-Idy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="1z6-nV-3YF"/>
                     <constraint firstItem="QGT-T2-Qax" firstAttribute="leading" secondItem="Vrz-Py-uXP" secondAttribute="trailing" constant="8" id="2pt-in-aIb"/>
                     <constraint firstItem="Vrz-Py-uXP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="40G-g2-Zju"/>
                     <constraint firstAttribute="trailing" secondItem="VCw-Yy-avx" secondAttribute="trailing" constant="8" id="BuH-JB-a5K"/>
@@ -54,19 +62,21 @@
                     <constraint firstItem="VCw-Yy-avx" firstAttribute="leading" secondItem="Uhy-QA-anI" secondAttribute="trailing" constant="8" id="TLq-p2-PJd"/>
                     <constraint firstItem="VCw-Yy-avx" firstAttribute="top" secondItem="QGT-T2-Qax" secondAttribute="bottom" constant="6.5" id="ckF-XA-QWe"/>
                     <constraint firstItem="Vrz-Py-uXP" firstAttribute="leading" secondItem="Uhy-QA-anI" secondAttribute="trailing" constant="8" id="d6f-5A-4ec"/>
+                    <constraint firstItem="qiQ-S3-Idy" firstAttribute="top" secondItem="VCw-Yy-avx" secondAttribute="bottom" constant="4.5" id="fSZ-Xk-BLL"/>
                     <constraint firstItem="Uhy-QA-anI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="koC-nA-bJT"/>
                     <constraint firstAttribute="trailing" secondItem="QGT-T2-Qax" secondAttribute="trailing" constant="8" id="pFd-u8-Wjo"/>
-                    <constraint firstAttribute="bottom" secondItem="VCw-Yy-avx" secondAttribute="bottom" constant="8" id="tC7-zL-v2m"/>
+                    <constraint firstAttribute="bottom" secondItem="qiQ-S3-Idy" secondAttribute="bottom" constant="20.5" id="se8-58-9fU"/>
                 </constraints>
             </tableViewCellContentView>
             <animations/>
             <connections>
+                <outlet property="favoriteCountLabel" destination="qiQ-S3-Idy" id="omv-gq-adP"/>
                 <outlet property="timestamp" destination="QGT-T2-Qax" id="s6z-RB-HFb"/>
                 <outlet property="tweetLabel" destination="VCw-Yy-avx" id="2IZ-UW-nDU"/>
                 <outlet property="userImage" destination="Uhy-QA-anI" id="cqU-0f-Dff"/>
                 <outlet property="userName" destination="Vrz-Py-uXP" id="ACi-aR-cNs"/>
             </connections>
-            <point key="canvasLocation" x="340" y="321"/>
+            <point key="canvasLocation" x="340" y="340"/>
         </tableViewCell>
     </objects>
 </document>
